...

    Box(modifier = modifier) {
        usernameFlow.collectAsState().value?.let { username ->
            Surface {
                Column {
                    Text(username)
                    Button(onClick = onLogout, modifier = Modifier.testTag("LOGOUT_BUTTON")) {
                        Text("Logout")
                    }
                }
            }
        } ?: Button(onClick = { showLoginDialog = true }, modifier = Modifier.testTag("LOGIN_BUTTON")) {
            Text("Login")
        }
    }

    if (showLoginDialog) {
        LoginDialog(
...
